--- a/templates/account/address.html.twig
+++ b/templates/account/address.html.twig
@@ -3,17 +3,33 @@
 {% block title %}Mes adresses - AUTOBOOST {% endblock %}
 
 {% block content %}
-    <a href="{{ path('app_account_address_add') }}" class="btn btn-info btn-sm float-right">Ajouter une adresse</a>
-<h1>Mes adresse</h1>
-    Ces dans cette espace vous allez pouvoir gérer vos adresses.
-    <br/>
-   <p class="text-center"> 
+ <!-- Header-->
+        <header class="bg-dark py-5">
+            <div class="container px-4 px-lg-5 my-5">
+                <div class="text-center text-white">
+                    <h1 class="display-4 fw-bolder">Shop in style</h1>
+                    <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+                </div>
+            </div>
+        </header>
+        <br>
+        <br>
+        <a href="{{ path('account') }}">Retourner à mon compte</a>
+        <br>
+        <br>
+        <br>
+        <a href="{{ path('app_account_address_add') }}" class="btn btn-info btn-sm float-right">Ajouter une adresse</a>
+      <h1>Mes adresse</h1>
+      Ces dans cette espace vous allez pouvoir gérer vos adresses.
+      <br>
+
+      <p class="text-center"> 
         {% if app.user.addresses|length ==0%}
         Vous n'avez pas encore ajouté d'adresse dans votre compte client. Pour en ajouter une, veuillez 
         <a href="{{ path('app_account_address_add') }}"> cliquez ici</a>
         {% else %}
 
-    <div class="row">
+      <div class="row">
         {% for address in app.user.addresses %}
           <div class="col-md-4">
             <div class="card" style="width: 18rem;">
@@ -29,6 +45,6 @@
           </div>
           {% endfor %}
       </div>
-{% endif %}
+  {% endif %}
     </p>
 {% endblock %}
