--- a/templates/account/address_form.html.twig
+++ b/templates/account/address_form.html.twig
@@ -3,23 +3,29 @@
 {% block title %}Ajouter une adresse - AUTOBOOST{% endblock %}
 
 {% block content %}
-    <h1>Gérer mes adresses</h1>
-    <a href="{{path('app_account_address_add')}}">Retour</a>
-    <hr>
-    {{form_start(form)}}
-    <div class="row">
-      <div class="col-md-12">{{form_row(form.name)}}</div>
-      <div class="col-md-6">{{form_row(form.firstname)}}</div>
-      <div class="col-md-6">{{form_row(form.lastname)}}</div>
-      <div class="col-md-6">{{form_row(form.compagny)}}</div>
-      <div class="col-md-6">{{form_row(form.address)}}</div>
-      <div class="col-md-6">{{form_row(form.postal)}}</div>
-      <div class="col-md-6">{{form_row(form.city)}}</div>
-      <div class="col-md-6">{{form_row(form.contry)}}</div>
-      <div class="col-md-6">{{form_row(form.phone)}}</div>
+ <!-- Header-->
+<header class="bg-dark py-5">
+  <div class="container px-4 px-lg-5 my-5">
+    <div class="text-center text-white">
+      <h1 class="display-4 fw-bolder">Shop in style</h1>
+      <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
     </div>
-
-    {{form_end(form)}}
-
-    
+  </div>
+</header>
+<h1>Gérer mes adresses</h1>
+<a href="{{path('app_account_address_add')}}">Retour</a>
+<hr>
+{{form_start(form)}}
+<div class="row">
+  <div class="col-md-12">{{form_row(form.name)}}</div>
+  <div class="col-md-6">{{form_row(form.firstname)}}</div>
+  <div class="col-md-6">{{form_row(form.lastname)}}</div>
+  <div class="col-md-6">{{form_row(form.compagny)}}</div>
+  <div class="col-md-6">{{form_row(form.address)}}</div>
+  <div class="col-md-6">{{form_row(form.postal)}}</div>
+  <div class="col-md-6">{{form_row(form.city)}}</div>
+  <div class="col-md-6">{{form_row(form.contry)}}</div>
+  <div class="col-md-6">{{form_row(form.phone)}}</div>
+</div>
+{{form_end(form)}}   
 {% endblock %}
