--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -3,7 +3,15 @@
 {% block title %}Compte - AUTOBOOST {% endblock %}
 
 {% block content %}
-
+ <!-- Header-->
+        <header class="bg-dark py-5">
+            <div class="container px-4 px-lg-5 my-5">
+                <div class="text-center text-white">
+                    <h1 class="display-4 fw-bolder">Shop in style</h1>
+                    <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+                </div>
+            </div>
+        </header>
 <h1>Mon compte</h1>
 
     {% if is_granted('ROLE_ADMIN') %}
