--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,14 +16,7 @@
         <!-- Custom styles for this template -->
         <link href="{{asset('assets/css/carousel.css')}}" rel="stylesheet">
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="{{asset('assets/css/bootstrap.min.css')}}" rel="stylesheet">
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="{{asset('assets/css/bootstrap.css')}}" rel="stylesheet">
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="{{asset('assets/css/_variables.scss')}}" rel="stylesheet">
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="{{asset('assets/css/_bootswatch.scss')}}" rel="stylesheet">``
-
+        
         <style>
         .bd-placeholder-img {
             font-size: 1.125rem;
@@ -55,82 +48,82 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="{{ path('app_products') }}">All Products</a></li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="{{ path('app_services') }}">Nos prestations</a></li>
-                                <li><a class="dropdown-item" href="{{ path('app_something') }}">Nos engagements</a></li>
+                                <a class="dropdown-item" href="{{ path('app_products') }}">All Products</a>
+                                <hr class="dropdown-divider" />
+                                <a class="dropdown-item" href="{{ path('app_services') }}">Nos prestations</a>
+                                <a class="dropdown-item" href="{{ path('app_something') }}">Nos engagements</a>
                             </ul>
                         </li>
                     </ul>
                     <div class="navbar-item-custom">
-						{% if app.user %}
-						<a href="{{ path('account') }}">Mon compte
-							<small>({{ app.user.firstname }})</small>
-						</a>
-						|
-						<a href="{{ path('app_logout')}}">Déconnexion</a>
-						{% else %}
-						<a href="{{ path('app_login') }}">Connexion</a>
-						|
-						<a href="{{ path('app_register') }}">Inscription</a>
-						{% endif %}
-					</div>
-                    <div class="mt-3"></div>
+					    {% if app.user %}
+					    <a href="{{ path('account') }}">Mon compte
+					    <small>({{ app.user.firstname }})</small>
+					    </a>
+					    |
+					    <a href="{{ path('app_logout')}}">Déconnexion</a>
+					    {% else %}
+					    <a href="{{ path('app_login') }}">Connexion</a>
+					    |
+					    <a href="{{ path('app_register') }}">Inscription</a>
+					    {% endif %}
+				    </div>
+                <div class="mt-3"></div>
                     <div class="navbar-icon">
-                    <form class="d-flex">
-                        <button class="btn btn-outline-dark" type="submit">
-                            <i class="bi-cart-fill me-1"></i>
-                            <a href="{{ path('app_cart')}}">Cart</a>
-                            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                        </button>
-                    </form>
+                        <form class="d-flex">
+                            <button class="btn btn-outline-dark" type="submit">
+                                <i class="bi-cart-fill me-1"></i>
+                                <a href="{{ path('app_cart')}}">Mon Panier</a>
+                                <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                            </button>
+                        </form>
+                    </div>
                 </div>
-            </div>
         </nav>
         <!-- Header-->
-    <header class="bg-dark py-5">
+        <header class="bg-dark py-5">
         {% if block('carousel') is defined %}
-        <div class="container mt-12">
-            <div class="carousel-container position-relative row">
-  
-        <!-- Sorry! Lightbox doesn't work - yet. -->
-  
-                <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                     <div class="carousel-inner">
-                        <div class="carousel-item active" data-slide-number="0">
-                        <img src="{{ asset('assets/img/audi_a3_revo.jpeg') }}" class="d-block w-100" alt="..." data-remote="https://source.unsplash.com/Pn6iimgM-wo/" data-type="image" data-toggle="lightbox" data-gallery="example-gallery">
+            <div class="container mt-12">
+                <div class="carousel-container position-relative row">
+                    <!-- Sorry! Lightbox doesn't work - yet. -->
+                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" data-slide-number="0">
+                            <img src="{{ asset('assets/img/audi_a3_revo.jpeg') }}" class="d-block w-100" alt="..." data-remote="https://source.unsplash.com/Pn6iimgM-wo/" data-type="image" data-toggle="lightbox" data-gallery="example-gallery">
+                            </div>
+                            <div class="carousel-item" data-slide-number="1">
+                            <img src="{{ asset('assets/img/engine.jpeg') }}" class="d-block w-100" alt="..." data-remote="https://source.unsplash.com/tXqVe7oO-go/" data-type="image" data-toggle="lightbox" data-gallery="example-gallery">
+                            </div>
+                            <div class="carousel-item" data-slide-number="2">
+                            <img src="{{ asset('assets/img/remap.jpeg') }}" class="d-block w-100" alt="..." data-remote="https://source.unsplash.com/qlYQb7B9vog/" data-type="image" data-toggle="lightbox" data-gallery="example-gallery">
+                            </div>
+                            <div class="carousel-item" data-slide-number="3">
+                            <img src="{{ asset('assets/img/reprogrammation-moteur.webp') }}" class="d-block w-100" alt="..." data-remote="https://source.unsplash.com/QfEfkWk1Uhk/" data-type="image" data-toggle="lightbox" data-gallery="example-gallery">
+                            </div>
+                            <div class="carousel-item" data-slide-number="4">
+                            <img src="{{ asset('assets/img/romac.png') }}" class="d-block w-100" alt="..." data-remote="https://source.unsplash.com/CSIcgaLiFO0/" data-type="image" data-toggle="lightbox" data-gallery="example-gallery">
+                            </div>
+                            <div class="carousel-item" data-slide-number="5">
+                            <img src="{{ asset('assets/img/motors-built.png') }}" class="d-block w-100" alt="..." data-remote="https://source.unsplash.com/a_xa7RUKzdc/" data-type="image" data-toggle="lightbox" data-gallery="example-gallery">
+                            </div>
                         </div>
-                    <div class="carousel-item" data-slide-number="1">
-                    <img src="{{ asset('assets/img/engine.jpeg') }}" class="d-block w-100" alt="..." data-remote="https://source.unsplash.com/tXqVe7oO-go/" data-type="image" data-toggle="lightbox" data-gallery="example-gallery">
-                    </div>
-                    <div class="carousel-item" data-slide-number="2">
-                    <img src="{{ asset('assets/img/remap.jpeg') }}" class="d-block w-100" alt="..." data-remote="https://source.unsplash.com/qlYQb7B9vog/" data-type="image" data-toggle="lightbox" data-gallery="example-gallery">
-                    </div>
-                    <div class="carousel-item" data-slide-number="3">
-                    <img src="{{ asset('assets/img/reprogrammation-moteur.webp') }}" class="d-block w-100" alt="..." data-remote="https://source.unsplash.com/QfEfkWk1Uhk/" data-type="image" data-toggle="lightbox" data-gallery="example-gallery">
-                    </div>
-                    <div class="carousel-item" data-slide-number="4">
-                    <img src="{{ asset('assets/img/romac.png') }}" class="d-block w-100" alt="..." data-remote="https://source.unsplash.com/CSIcgaLiFO0/" data-type="image" data-toggle="lightbox" data-gallery="example-gallery">
-                    </div>
-                    <div class="carousel-item" data-slide-number="5">
-                     <img src="{{ asset('assets/img/motors-built.png') }}" class="d-block w-100" alt="..." data-remote="https://source.unsplash.com/a_xa7RUKzdc/" data-type="image" data-toggle="lightbox" data-gallery="example-gallery">
                     </div>
                 </div>
+                <!-- /container -->
             </div>
-        </div>
-        </div> <!-- /container -->
-        {% endif %}    
+            <!-- /container -->
+            {% endif %}    
         </div>
     </header>
-            
+     <!-- /condition carousel -->       
     <div class="container marketing {% if block('carousel') is not defined %}mt-5{% endif %}">
     <hr>
     {% block content %}
+
     {% endblock %}
-
-    </div><!-- /.container -->
-    <div class="container-fluid"></div>
-
+    <!-- /.container -->
+    </div>
+    
     <!-- FOOTER -->
     <footer class="footer-custom">
             <p>Copyright &copy; AUTOBOOST 2022<br>
@@ -140,7 +133,6 @@
     </footer>
     </div>
 </main>
-<script src="{{asset('assets/js/script.js')}}"></script>
 <script src="{{asset('assets/js/scripts.js')}}"></script>
 <script src="{{asset('assets/js/bootstrap.bundle.js')}}"></script>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    <!-- Product actions-->
                                                                                                                                     </body>
