--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -3,6 +3,15 @@
 {% block title %}Mon panier - AUTOBOOST{% endblock %}
 
 {% block content %}
+ <!-- Header-->
+<header class="bg-dark py-5">
+    <div class="container px-4 px-lg-5 my-5">
+        <div class="text-center text-white">
+            <h1 class="display-4 fw-bolder">Shop in style</h1>
+            <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+        </div>
+    </div>
+</header>
 <h1>Mon panier</h1>
 Retrouvez l'ensemble des produits que vous avez ajouté à votre panier
 
@@ -73,9 +82,15 @@ Retrouvez l'ensemble des produits que vous avez ajouté à votre panier
     <b>Nombre de produit : </b>{{ cart|length }}<br>
     <b>Total de mon panier : {{(total / 100)|number_format(2, ',')}} €</b>
     <a href="{{ path('app_order') }}" class="btn btn-success btn-block mt-3">Valider mon panier</a>
-</div>
+    <br>
+    <br>
+    <a href="{{ '#' }}">Retourner au produit</a>
+
+    </div>
 {% else %}
     <hr>
     <p><b>Votre panier est vide</b></p>
+    <br>
+    <a href="{{ '#' }}">Retourner au produit</a>
 {% endif %}
 {% endblock %}
