--- a/templates/order/add.html.twig
+++ b/templates/order/add.html.twig
@@ -6,6 +6,15 @@
 {% block title %}Paiement de  ma commande - AUTOBOOST{% endblock %}
 
 {% block content %}
+ <!-- Header-->
+        <header class="bg-dark py-5">
+            <div class="container px-4 px-lg-5 my-5">
+                <div class="text-center text-white">
+                    <h1 class="display-4 fw-bolder">Shop in style</h1>
+                    <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+                </div>
+            </div>
+        </header>
     <h2>Mon récapitulatif</h2>
     <p>Vérifiez vos informations avant de payer votre commande.</p>
     <hr>
